// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section should render 1`] = `
<header
  className="sc-dnqmqq cVYhOi"
>
  <div
    className="sc-iwsKbI izxWnz"
  >
    title
  </div>
</header>
`;

exports[`Section should render content 1`] = `
<header
  className="sc-dnqmqq cVYhOi"
>
  <div
    className="sc-iwsKbI izxWnz"
  >
    title
  </div>
  content
</header>
`;
